--- a/Bibliotech/bin/main/static/cadastrarCategoria.html
+++ b/Bibliotech/bin/main/static/cadastrarCategoria.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bibliotech - Cadastrar livro</title>
+        <title>Bibliotech - Gerenciar Categorias</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -57,13 +57,13 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-building"></i></div>
                                 Bibliotecas
                             </a>
+							<a class="nav-link collapsed" href="cadastrarCategoria.html">
+							    <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+							    Categorias
+							</a>
                             <a class="nav-link collapsed" href="cadastrarLivro.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Livros
-                            </a>
-                            <a class="nav-link collapsed" href="cadastrarCategoria.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Categorias
                             </a>
                         </div>
                     </div>
@@ -76,22 +76,77 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Cadastrar Biblioteca</h1>
-                        </br>
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                <i class="fas fa-list-ul me-1"></i>
-                                Cadastrar Biblioteca
-                            </div>
-                            <div class="card-body">
-                                <form action="http://localhost:8080/categorias" method="post" onsubmit="return redirectCadastroCategoria()">
-                                    <label for="nome" class="form-label">Nome:</label>
-                                    <input type="text" class="form-control" id="nome" name="nome" required>
-                                  </br>
-                                    <button type="submit" class="btn btn-primary">Cadastrar</button>
-                                </form>                                
-                            </div>
-                        </div>
+                        <h1 class="mt-4">Gerenciar Categorias</h1>
+						<!-- Botão para abrir o modal de cadastro -->
+						</br>
+						<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cadastroModal">
+							Cadastrar Categoria
+						</button>
+						</br></br>
+						<!-- Modal Cadastro Categoria -->
+						<div class="modal fade" id="cadastroModal" tabindex="-1" aria-labelledby="cadastroModalLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="cadastroModalLabel">Cadastrar Categoria</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+									</div>
+									<div class="modal-body">
+										<form onsubmit="return cadastrarCategoria()">
+											<label for="nomeCategoria" class="form-label">Nome:</label>
+											<input name="nomeCategoria" id="nomeCategoria" type="text" class="form-control" required>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+												<button type="submit" class="btn btn-success">Salvar</button>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- Modal Editar Categoria -->
+						<div class="modal fade" id="editarModal" tabindex="-1" aria-labelledby="editarModalLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="editarModalLabel">Editar Categoria</h5>
+										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+									</div>
+									<div class="modal-body">
+										<form onsubmit="return editarCategoria()">
+											<label for="idCategoriaEditar" class="form-label" hidden="true">ID:</label>
+											<input name="idCategoriaEditar" id="idCategoriaEditar" type="text" class="form-control" hidden="true" disabled>
+											<label for="nomeCategoriaEditar" class="form-label">Nome:</label>
+											<input name="nomeCategoriaEditar" id="nomeCategoriaEditar" type="text" class="form-control" required>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+												<button type="submit" class="btn btn-success">Salvar</button>
+											</div>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- TABELA -->
+						<div class="card mb-4">
+							<div class="card-header">
+						    	<i class="fas fa-table me-1"></i>
+						        	Categorias
+						    </div>
+						    <div class="card-body">
+						    	<table id="datatablesSimpleCategoria">
+						        	<thead>
+						            	<tr>
+						                	<th>ID</th>
+						                	<th>Nome</th>
+						                	<th>Ações</th>
+						                </tr>
+						            </thead>
+						            <tbody id="tbodyCategoria">
+						            </tbody>
+						        </table>
+						    </div>
+						</div>
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
@@ -104,7 +159,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src="js/scriptsCategoria.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="assets/demo/chart-area-demo.js"></script>
         <script src="assets/demo/chart-bar-demo.js"></script>
