--- a/Bibliotech/src/main/resources/static/cadastrarBiblioteca.html
+++ b/Bibliotech/src/main/resources/static/cadastrarBiblioteca.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bibliotech - Cadastrar livro</title>
+        <title>Bibliotech - Gerenciar Bibliotecas</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -57,13 +57,13 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-building"></i></div>
                                 Bibliotecas
                             </a>
+							<a class="nav-link collapsed" href="cadastrarCategoria.html">
+							    <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+							    Categorias
+							</a>
                             <a class="nav-link collapsed" href="cadastrarLivro.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Livros
-                            </a>
-                            <a class="nav-link collapsed" href="cadastrarCategoria.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Categorias
                             </a>
                         </div>
                     </div>
@@ -75,30 +75,128 @@
             </div>
             <div id="layoutSidenav_content">
                 <main>
-                    <div class="container-fluid px-4">
-                        <h1 class="mt-4">Cadastrar Biblioteca</h1>
-                        </br>
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                <i class="fas fa-list-ul me-1"></i>
-                                Cadastrar Biblioteca
-                            </div>
-                            <div class="card-body">
-                                <form target="_blank" action="http://localhost:8080/bibliotecas" method="post" onsubmit="return redirectCadastroBiblioteca()">
-                                    <label for="nome" class="form-label">Nome:</label>
-                                    <input type="text" class="form-control" id="nome" name="nome" required>
-                                  </br>
-                                    <label for="endereco" class="form-label">Endereço:</label>
-                                    <input type="text" class="form-control" id="endereco" name="endereco" required>
-                                  </br>
-                                    <label for="telefone" class="form-label">Telefone:</label>
-                                    <input type="text" class="form-control" id="telefone" name="telefone" required>
-                                  </br>
-                                    <button type="submit" class="btn btn-primary">Cadastrar</button>
-                                </form>                                
-                            </div>
-                        </div>
-                    </div>
+					<div class="container-fluid px-4">
+					    <h1 class="mt-4">Gerenciar Bibliotecas</h1>
+					<!-- Botão para abrir o modal de cadastro -->
+					</br>
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cadastroModal">
+						Cadastrar Biblioteca
+					</button>
+					</br></br>
+					<!-- Modal Cadastro -->
+					<div class="modal fade" id="cadastroModal" tabindex="-1" aria-labelledby="cadastroModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="cadastroModalLabel">Cadastrar Biblioteca</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+								</div>
+								<div class="modal-body">
+									<form onsubmit="return cadastrarBiblioteca()">
+										<label for="nomeBiblioteca" class="form-label">Nome:</label>
+										<input name="nomeBiblioteca" id="nomeBiblioteca" type="text" class="form-control" required>
+										<br>
+										<label for="cepBiblioteca" class="form-label">CEP:</label>
+										<input name="cepBiblioteca" id="cepBiblioteca" type="number" class="form-control" required>
+										<br>
+										<label for="enderecoBiblioteca" class="form-label">Endereço:</label>
+										<input name="enderecoBiblioteca" id="enderecoBiblioteca" type="text" class="form-control" required>
+										<br>
+										<label for="numeroEnderecoBiblioteca" class="form-label">Número:</label>
+										<input name="numeroEnderecoBiblioteca" id="numeroEnderecoBiblioteca" type="number" class="form-control" required>
+										<br>
+										<label for="bairroBiblioteca" class="form-label">Bairro:</label>
+										<input name="bairroBiblioteca" id="bairroBiblioteca" type="text" class="form-control" required>
+										<br>
+										<label for="cidadeBiblioteca" class="form-label">Cidade:</label>
+										<input name="cidadeBiblioteca" id="cidadeBiblioteca" type="text" class="form-control" required>
+										<br>
+										<label for="estadoBiblioteca" class="form-label">Estado:</label>
+										<input name="estadoBiblioteca" id="estadoBiblioteca" type="text" class="form-control" required>
+										<br>
+										<label for="telefoneBiblioteca" class="form-label">Telefone:</label>
+										<input name="telefoneBiblioteca" id="telefoneBiblioteca" type="number" class="form-control" required>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+											<button type="submit" class="btn btn-success">Salvar</button>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Modal Editar -->
+					<div class="modal fade" id="editarModal" tabindex="-1" aria-labelledby="editarModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="editarModalLabel">Editar Biblioteca</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+								</div>
+								<div class="modal-body">
+									<form onsubmit="return editarBiblioteca()">
+										<label for="idBibliotecaEditar" class="form-label" hidden="true">ID:</label>
+										<input name="idBibliotecaEditar" id="idBibliotecaEditar" type="text" class="form-control" hidden="true" disabled>
+										<label for="nomeBibliotecaEditar" class="form-label">Nome:</label>
+										<input name="nomeBibliotecaEditar" id="nomeBibliotecaEditar" type="text" class="form-control" required>
+										<br>
+										<label for="cepBibliotecaEditar" class="form-label">CEP:</label>
+										<input name="cepBibliotecaEditar" id="cepBibliotecaEditar" type="number" class="form-control" required>
+										<br>
+										<label for="enderecoBibliotecaEditar" class="form-label">Endereço:</label>
+										<input name="enderecoBibliotecaEditar" id="enderecoBibliotecaEditar" type="text" class="form-control" required>
+										<br>
+										<label for="numeroBibliotecaEditar" class="form-label">Número:</label>
+										<input name="numeroBibliotecaEditar" id="numeroBibliotecaEditar" type="number" class="form-control" required>
+										<br>
+										<label for="bairroBibliotecaEditar" class="form-label">Bairro:</label>
+										<input name="bairroBibliotecaEditar" id="bairroBibliotecaEditar" type="text" class="form-control" required>
+										<br>
+										<label for="cidadeBibliotecaEditar" class="form-label">Cidade:</label>
+										<input name="cidadeBibliotecaEditar" id="cidadeBibliotecaEditar" type="text" class="form-control" required>
+										<br>
+										<label for="estadoBibliotecaEditar" class="form-label">Estado:</label>
+										<input name="estadoBibliotecaEditar" id="estadoBibliotecaEditar" type="text" class="form-control" required>
+										<br>
+										<label for="telefoneBibliotecaEditar" class="form-label">Telefone:</label>
+										<input name="telefoneBibliotecaEditar" id="telefoneBibliotecaEditar" type="number" class="form-control" required>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+											<button type="submit" class="btn btn-success">Salvar</button>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>					
+					<!-- INICIO TABELA -->
+					<div class="card mb-4">
+						<div class="card-header">
+					    	<i class="fas fa-table me-1"></i>
+					        Bibliotecas
+					    </div>
+					    <div class="card-body">
+					    	<table id="datatablesSimpleBiblioteca">
+					        	<thead>
+					            	<tr>
+					            		<th>ID</th>
+					            		<th>Nome</th>
+					            		<th>Endereço</th>
+										<th>Número</th>
+										<th>Bairro</th>
+										<th>Cidade</th>
+										<th>Estado</th>
+										<th>CEP</th>
+										<th>Telefone</th>
+					            		<th>Ações</th>
+					            	</tr>
+					            </thead>
+					            <tbody id="tbodyBiblioteca">
+					            </tbody>
+					        </table>
+					     </div>
+					 </div>
+					</div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
@@ -110,7 +208,7 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+        <script src="js/scriptsBiblioteca.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="assets/demo/chart-area-demo.js"></script>
         <script src="assets/demo/chart-bar-demo.js"></script>
