--- a/Bibliotech/src/main/resources/static/cadastrarLivro.html
+++ b/Bibliotech/src/main/resources/static/cadastrarLivro.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bibliotech - Cadastrar livro</title>
+        <title>Bibliotech - Gerenciar Livros</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -57,13 +57,13 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-building"></i></div>
                                 Bibliotecas
                             </a>
+							<a class="nav-link collapsed" href="cadastrarCategoria.html">
+							    <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+							    Categorias
+							</a>
                             <a class="nav-link collapsed" href="cadastrarLivro.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Livros
-                            </a>
-                            <a class="nav-link collapsed" href="cadastrarCategoria.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Categorias
                             </a>
                         </div>
                     </div>
@@ -74,58 +74,123 @@
                 </nav>
             </div>
             <div id="layoutSidenav_content">
-                <main>             
+                <main>  
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Cadastrar Livro</h1>
-                    </br>
-                        <!-- INICIO TESTE TABELA -->
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                <i class="fas fa-table me-1"></i>
-                                Livros
-                            </div>
-                            <div class="card-body">
-                                <table id="datatablesSimple">
-                                    <thead>
-                                        <tr>
-                                            <th>ID</th>
-                                            <th>Nome</th>
-                                            <th>Editora</th>
-                                            <th>Categoria</th>
-                                            <th>Ações</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="tbodyLivro">
-
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <button onclick="listaTabelaLivro()" class="btn btn-primary">Carregar tabela</button>
-                        <!-- FIM TESTE TABELA -->
+                        <h1 class="mt-4">Gerenciar Livros</h1>
+					<!-- Botão para abrir o modal de cadastro -->
+					</br>
+					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#cadastroModal">
+						Cadastrar Livro
+					</button>
+					</br></br>
+					<!-- Modal Cadastro -->
+					<div class="modal fade" id="cadastroModal" tabindex="-1" aria-labelledby="cadastroModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="cadastroModalLabel">Cadastrar Livro</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+								</div>
+								<div class="modal-body">
+									<form onsubmit="return cadastrarLivro()">
+										<label for="nomeLivro" class="form-label">Nome:</label>
+										<input name="nomeLivro" id="nomeLivro" type="text" class="form-control" required>
+										<br>
+										<label for="editoraLivro" class="form-label">Editora:</label>
+										<input name="editoraLivro" id="editoraLivro" type="text" class="form-control" required>
+										<br>
+										<label for="categoriaLivro" class="form-label">Categoria:</label>
+										<br>
+										<select name="categoriaLivro" id="categoriaLivro" class="form-select form-select-lg mb-3" aria-label="Large select example">
+											<option selected>Selecione a categoria</option>
+										</select>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+											<button type="submit" class="btn btn-success">Salvar</button>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Modal Editar Livro -->
+					<div class="modal fade" id="editarModal" tabindex="-1" aria-labelledby="editarModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="editarModalLabel">Editar Livro</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+								</div>
+								<div class="modal-body">
+									<form onsubmit="return editarLivro()">
+										<label for="idLivroEditar" class="form-label" hidden="true">ID:</label>
+										<input name="idLivroEditar" id="idLivroEditar" type="text" class="form-control" hidden="true" disabled>
+										<label for="nomeLivroEditar" class="form-label">Nome:</label>
+										<input name="nomeLivroEditar" id="nomeLivroEditar" type="text" class="form-control" required>
+										<br>
+										<label for="editoraLivroEditar" class="form-label">Editora:</label>
+										<input name="editoraLivroEditar" id="editoraLivroEditar" type="text" class="form-control" required>
+										<br>
+										<label for="categoriaLivroEditar" class="form-label">Categoria:</label>
+										<br>
+										<select name="categoriaLivroEditar" id="categoriaLivroEditar" class="form-select form-select-lg mb-3" aria-label="Large select example">
+											<option selected>Selecione a categoria</option>
+										</select>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+											<button type="submit" class="btn btn-success">Salvar</button>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>					
+					<!-- INICIO TESTE TABELA -->
+					                        <div class="card mb-4">
+					                            <div class="card-header">
+					                                <i class="fas fa-table me-1"></i>
+					                                Livros
+					                            </div>
+					                            <div class="card-body">
+					                                <table id="datatablesSimple">
+					                                    <thead>
+					                                        <tr>
+					                                            <th>ID</th>
+					                                            <th>Nome</th>
+					                                            <th>Editora</th>
+					                                            <th>Categoria</th>
+					                                            <th>Ações</th>
+					                                        </tr>
+					                                    </thead>
+					                                    <tbody id="tbodyLivro">
+					                                    </tbody>
+					                                </table>
+					                            </div>
+					                        </div>
+						<!-- FORMULÁRIO PARA CADASTRO DE LIVRO
                         <div class="card mb-4">
                             <div class="card-header">
                                 <i class="fas fa-list-ul me-1"></i>
                                 Cadastrar Livro
                             </div>
-                            <div class="card-body">
-                                <form target="_blank" action="http://localhost:8080/livros" method="post" onsubmit="return redirectCadastroLivro()">
-                                    <label for="nome" class="form-label">Nome:</label>
-                                    <input type="text" class="form-control" id="nome" name="nome" required>
-                                  </br>
-                                    <label for="editora" class="form-label">Editora:</label>
-                                    <input type="text" class="form-control" id="editora" name="editora" required>
-                                  </br>
-                                    <label for="categoria" class="form-label">Categoria:</label>
-                                  </br>
-                                    <select id="categoria_id" class="form-select form-select-lg mb-3" aria-label="Large select example" name="categoria">
-                                      <option selected>Selecione a categoria</option>
-                                    </select>
-                                  </br>
-                                    <button type="submit" class="btn btn-primary">Cadastrar</button>
-                                </form>                                
+                            <div class="card-body">								
+								<form onsubmit="return cadastrarLivro()">
+									<label for="nomeLivro" class="form-label">Nome:</label>
+									<input name="nomeLivro" id="nomeLivro" type="text" class="form-control" required>
+									<br>
+									<label for="editeditoraLivroora" class="form-label">Editora:</label>
+									<input name="editoraLivro" id="editoraLivro" type="text" class="form-control" required>
+									<br>
+								    <label for="categoriaLivro" class="form-label">Categoria:</label>
+									<br>
+								    <select name="categoriaLivro" id="categoriaLivro" class="form-select form-select-lg mb-3" aria-label="Large select example">
+								    	<option selected>Selecione a categoria</option>
+								    </select>
+								    <button type="submit" class="btn btn-primary">Cadastrar</button>
+								</form>
                             </div>
                         </div>
+						-->
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
@@ -138,7 +203,7 @@
             </div>
         </div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-		<script src="js/scripts.js"></script>
+		<script src="js/scriptsLivro.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
 		<script src="assets/demo/chart-area-demo.js"></script>
 		<script src="assets/demo/chart-bar-demo.js"></script>
