--- a/Bibliotech/src/main/resources/static/index.html
+++ b/Bibliotech/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dashboard - SB Admin</title>
+        <title>Bibliotech</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -57,13 +57,13 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-building"></i></div>
                                 Bibliotecas
                             </a>
+							<a class="nav-link collapsed" href="cadastrarCategoria.html">
+							    <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
+							    Categorias
+							</a>
                             <a class="nav-link collapsed" href="cadastrarLivro.html">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                                 Livros
-                            </a>
-                            <a class="nav-link collapsed" href="cadastrarCategoria.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                                Categorias
                             </a>
                         </div>
                     </div>
@@ -80,46 +80,26 @@
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active">Dashboard</li>
                         </ol>
-                        <div class="card mb-4">
-                            <div class="card-header">
-                                <i class="fas fa-table me-1"></i>
-                                DataTable Example
-                            </div>
-                            <div class="card-body">
-                                <table id="datatablesSimple">
-                                    <thead>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Position</th>
-                                            <th>Office</th>
-                                            <th>Age</th>
-                                            <th>Start date</th>
-                                            <th>Salary</th>
-                                        </tr>
-                                    </thead>
-                                    <tfoot>
-                                        <tr>
-                                            <th>Name</th>
-                                            <th>Position</th>
-                                            <th>Office</th>
-                                            <th>Age</th>
-                                            <th>Start date</th>
-                                            <th>Salary</th>
-                                        </tr>
-                                    </tfoot>
-                                    <tbody>
-                                        <tr>
-                                            <td>Tiger Nixon</td>
-                                            <td>System Architect</td>
-                                            <td>Edinburgh</td>
-                                            <td>61</td>
-                                            <td>2011/04/25</td>
-                                            <td>$320,800</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
+						<div class="row">
+							<div class="col-xl-6">
+							    <div class="card mb-4">
+							        <div class="card-header">
+							            <i class="fas fa-chart-bar me-1"></i>
+							            Quantidade de livros por biblioteca
+							        </div>
+							        <div class="card-body"><canvas id="graficoQtdBiblioteca" width="100%" height="40"></canvas></div>
+							    </div>
+							</div>
+							<div class="col-xl-6">
+							    <div class="card mb-4">
+							        <div class="card-header">
+							            <i class="fas fa-chart-bar me-1"></i>
+							            Quantidade de livros por categoria
+							        </div>
+							        <div class="card-body"><canvas id="graficoQtdCategoria" width="100%" height="40"></canvas></div>
+							    </div>
+							</div>
+						</div>
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
@@ -132,7 +112,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
         <script src="assets/demo/chart-area-demo.js"></script>
         <script src="assets/demo/chart-bar-demo.js"></script>
